--- a/html/EasterEgg.html
+++ b/html/EasterEgg.html
@@ -226,7 +226,7 @@
     c2.width = c3.width = window.innerWidth;
     c2.height = c3.height = window.innerHeight;
     ctx1.fillStyle = '#000';
-    const text = '妲菲,祝你生日快乐！'
+    const text = '怡霖,祝你生日快乐！'
     let textWidth = 99999999;
 
     while (textWidth > window.innerWidth) {
