--- a/index.html
+++ b/index.html
@@ -158,33 +158,33 @@
 		to { transform: rotate(360deg); }
 	}
 
-	/* 五月天萝卜装饰 */
+	
     .radish-deco1 {
         position: absolute;
         width: 40px;
         height: 40px;
-        background: url('../img/hu1.JPG') no-repeat center;
+        background: url('img/image4.png') no-repeat center;
         background-size: contain;
         opacity: 0.7;
         z-index: 1;
         pointer-events: none; /* 防止干扰表单输入 */
     }
-	/* 五月天萝卜装饰 */
+	
     .radish-deco2 {
         position: absolute;
-        width: 40px;
-        height: 40px;
-        background: url('../img/hu2.JPG') no-repeat center;
+        width: 50px;
+        height: 50px;
+        background: url('img/lemon2.jpg') no-repeat center;
         background-size: contain;
         opacity: 0.7;
         z-index: 1;
         pointer-events: none; /* 防止干扰表单输入 */
-    }/* 五月天萝卜装饰 */
+    }
     .radish-deco3 {
         position: absolute;
-        width: 40px;
-        height: 40px;
-        background: url('../img/hu3.JPG') no-repeat center;
+        width: 70px;
+        height: 70px;
+        background: url('img/lemon3.png') no-repeat center;
         background-size: contain;
         opacity: 0.7;
         z-index: 1;
@@ -205,7 +205,7 @@
 
     .radish-3 {
         top: 80%;
-        left: 30%;
+        left: 31%;
         transform: translateY(-50%) rotate(10deg);
     }
 
@@ -232,10 +232,10 @@
 			</div>
 
 			<div class="mayday-lyrics">
-				<div class="lyrics-text lyrics-1">我和我最后的倔强</div>
-				<div class="lyrics-text lyrics-2">握紧双手绝对不放</div>
-				<div class="lyrics-text lyrics-3">下一站是不是天堂</div>
-				<div class="lyrics-text lyrics-4">就算失望不能绝望</div>
+				<div class="lyrics-text lyrics-1">如果我们不曾相遇</div>
+				<div class="lyrics-text lyrics-2">我会是在哪里</div>
+				<div class="lyrics-text lyrics-3">如果我们从不曾相识</div>
+				<div class="lyrics-text lyrics-4">不存在这首歌曲</div>
 			</div>
 
 			<div class="container">
@@ -252,9 +252,9 @@
 						<h2 class="spotlight-text" data-spotlight="Happy Birthday">Happy&nbspBirthday</h2>
 						<form class="form" id="login-form">
 							<input id="userName" name="userName" type="text" placeholder="用户名" required>
-							<input id="pwd" name="pwd" type="password" placeholder="生日(例如:0101)" required>
+							<input id="pwd" name="pwd" type="password" placeholder="密码(例如:0101)" required>
 						</form>
-						<h2 class="spotlight-text" data-spotlight="MayDay">MayDay</h2>
+						<h2 class="spotlight-text" data-spotlight="22">22</h2>
 
 					</div>
 
