按钮信息更改

--- a/html/BirthdayCake.html
+++ b/html/BirthdayCake.html
@@ -325,7 +325,7 @@
     <a class="lk2">
       <div class="link2">
         <div class="bt1">
-          我不喜欢
+          我很讨厌
         </div>
       </div>
     </a>
