--- a/html/BirthdayCake.html
+++ b/html/BirthdayCake.html
@@ -21,8 +21,8 @@
         }
 
         .card-container {
-            width: 160px;
-            height: 220px;
+            width: 80px;
+            height: 110px;
             position: relative;
             perspective: 1000px;
             margin: 0 10px;
@@ -118,25 +118,61 @@
 
   <!-- 牌部分 -->
   <div class="cards-wrapper">
-    <div class="card-container" data-member="ashin" data-audio="../music/dog1.MP3" data-image="https://via.placeholder.com/160x220?text=Ashin">
+    <div class="card-container" data-member="ashin" data-audio="" data-image="https://via.placeholder.com/160x220?text=Ashin">
       <div class="cover">?</div>
-      <div class="back" style="background-image: url('../img/dog1.png');"></div>
+      <div class="back" style="background-image: url('../img/bai.png');"></div>
   </div>
-  <div class="card-container" data-member="stone" data-audio="../music/dog2.MP3" data-image="https://via.placeholder.com/160x220?text=Monster">
+  <div class="card-container" data-member="stone" data-audio="" data-image="https://via.placeholder.com/160x220?text=Monster">
       <div class="cover">?</div>
-      <div class="back" style="background-image: url('../img/dog2.png');"></div>
+      <div class="back" style="background-image: url('../img/bai.png');"></div>
   </div>
-  <div class="card-container" data-member="monster" data-audio="../music/dog3.MP3" data-image="https://via.placeholder.com/160x220?text=Stone">
+  <div class="card-container" data-member="monster" data-audio="" data-image="https://via.placeholder.com/160x220?text=Stone">
       <div class="cover">?</div>
-      <div class="back" style="background-image: url('../img/dog3.png');"></div>
+      <div class="back" style="background-image: url('../img/bai.png');"></div>
   </div>
-  <div class="card-container" data-member="masa" data-audio="../music/dog4.MP3" data-image="https://via.placeholder.com/160x220?text=Masa">
+  <div class="card-container" data-member="masa" data-audio="" data-image="https://via.placeholder.com/160x220?text=Masa">
       <div class="cover">?</div>
-      <div class="back" style="background-image: url('../img/dog4.png');"></div>
+      <div class="back" style="background-image: url('../img/bai.png');"></div>
   </div>
-  <div class="card-container" data-member="guanyou" data-audio="../music/dog5.MP3" data-image="https://via.placeholder.com/160x220?text=Ming">
+  <div class="card-container" data-member="guanyou" data-audio="" data-image="https://via.placeholder.com/160x220?text=Ming">
       <div class="cover">?</div>
-      <div class="back" style="background-image: url('../img/dog5.png');"></div>
+      <div class="back" style="background-image: url('../img/fa.png');"></div>
+  </div>
+    <div class="card-container" data-member="ashin" data-audio="" data-image="https://via.placeholder.com/160x220?text=Ashin">
+      <div class="cover">?</div>
+      <div class="back" style="background-image: url('../img/fa.png');"></div>
+  </div>
+  <div class="card-container" data-member="stone" data-audio="" data-image="https://via.placeholder.com/160x220?text=Monster">
+      <div class="cover">?</div>
+      <div class="back" style="background-image: url('../img/fa.png');"></div>
+  </div>
+  <div class="card-container" data-member="monster" data-audio="" data-image="https://via.placeholder.com/160x220?text=Stone">
+      <div class="cover">?</div>
+      <div class="back" style="background-image: url('../img/fa.png');"></div>
+  </div>
+  <div class="card-container" data-member="masa" data-audio="" data-image="https://via.placeholder.com/160x220?text=Masa">
+      <div class="cover">?</div>
+      <div class="back" style="background-image: url('../img/zhong.png');"></div>
+  </div>
+  <div class="card-container" data-member="guanyou" data-audio="" data-image="https://via.placeholder.com/160x220?text=Ming">
+      <div class="cover">?</div>
+      <div class="back" style="background-image: url('../img/zhong.png');"></div>
+  </div>
+    <div class="card-container" data-member="ashin" data-audio="" data-image="https://via.placeholder.com/160x220?text=Ashin">
+      <div class="cover">?</div>
+      <div class="back" style="background-image: url('../img/zhong.png');"></div>
+  </div>
+  <div class="card-container" data-member="stone" data-audio="" data-image="https://via.placeholder.com/160x220?text=Monster">
+      <div class="cover">?</div>
+      <div class="back" style="background-image: url('../img/zhong.png');"></div>
+  </div>
+  <div class="card-container" data-member="monster" data-audio="" data-image="https://via.placeholder.com/160x220?text=Stone">
+      <div class="cover">?</div>
+      <div class="back" style="background-image: url('../img/ertong.png');"></div>
+  </div>
+  <div class="card-container" data-member="masa" data-audio="" data-image="https://via.placeholder.com/160x220?text=Masa">
+      <div class="cover">?</div>
+      <div class="back" style="background-image: url('../img/ertong.png');"></div>
   </div>
 </div>
 
@@ -306,7 +342,7 @@
       <rect class="come" x="10" y="475.571" fill="#fefae9" width="180" height="4" />
     </svg>
     <!-- 最终图片容器 -->
-    <div class="final-image" id="final-image" style="background-image: url('../img/image.png');"></div>
+    <div class="final-image" id="final-image" style="background-image: url('../img/majiangbeijing.png');"></div>
   <div class="happy">
     <img src="../img/HappyBirthday.png">
   </div>
@@ -371,7 +407,7 @@
 
 
   let flippedCount = 0;
-  const totalCards = 5;
+  const totalCards = 14;
   const memberAudios = {};
   let finalAudio = null;
 
@@ -381,7 +417,7 @@
       const audioSrc = $(this).data('audio');
       memberAudios[member] = new Audio(audioSrc);
   });
-  finalAudio = new Audio('../music/dogzhufu.MP3'); // 最终播放的音乐
+  finalAudio = new Audio(''); // 最终播放的音乐
   finalAudio1 = new Audio('../music/happy.birthday.mp3'); // 最终播放的音乐
 
   // 点击翻牌
