--- a/html/BirthdayCake.html
+++ b/html/BirthdayCake.html
@@ -67,7 +67,7 @@
 
   .mj-seat.left {
     left: 22px;
-    top: 50%;
+    top: 95%;
     transform: translateY(-50%) rotate(-90deg);
     transform-origin: left top;
     width: min(760px, 92vh);
@@ -75,7 +75,7 @@
 
   .mj-seat.right {
     right: 22px;
-    top: 50%;
+    top: 95%;
     transform: translateY(-50%) rotate(90deg);
     transform-origin: right top;
     width: min(760px, 92vh);
@@ -139,6 +139,13 @@
     width: min(980px, 94vw);
     height: 350px;
     z-index: 25;
+    pointer-events: auto;
+  }
+
+  .mj-self-tiles,
+  .mj-wall,
+  .mj-hand,
+  .mj-seat {
     pointer-events: none;
   }
 
@@ -179,6 +186,48 @@
     opacity: 0;
     transform: translate3d(0, 0, 0) scale(0.92) rotate(-6deg);
     z-index: 12;
+    pointer-events: auto;
+    cursor: pointer;
+    text-decoration: none;
+    -webkit-tap-highlight-color: transparent;
+  }
+
+  .mj-draw-tile:focus-visible {
+    outline: none;
+    box-shadow:
+      0 16px 32px rgba(0, 0, 0, 0.32),
+      0 0 0 3px rgba(255, 230, 140, 0.55);
+  }
+
+  .mj-draw-tile::before {
+    content: "";
+    position: absolute;
+    inset: -26px;
+    border-radius: 26px;
+    background:
+      radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0) 58%),
+      conic-gradient(from 0deg,
+        rgba(255, 214, 90, 0.0),
+        rgba(255, 214, 90, 0.92),
+        rgba(255, 214, 90, 0.0),
+        rgba(120, 220, 255, 0.9),
+        rgba(255, 214, 90, 0.0)
+      );
+    filter: blur(7px);
+    opacity: 0;
+    transform: rotate(0deg) scale(0.95);
+    mix-blend-mode: screen;
+    pointer-events: none;
+  }
+
+  .mj-draw-tile::after {
+    content: "";
+    position: absolute;
+    inset: -10px;
+    border-radius: 18px;
+    border: 2px solid rgba(255, 230, 150, 0.0);
+    opacity: 0;
+    pointer-events: none;
   }
 
   .mj-draw-tile img {
@@ -198,6 +247,26 @@
     animation: selfDrawPop 760ms cubic-bezier(0.2, 0.9, 0.15, 1) forwards, winGlow 1200ms ease-in-out infinite;
   }
 
+  .mj-draw-tile.win::before {
+    opacity: 1;
+    animation: winSpark 920ms ease-in-out infinite;
+  }
+
+  .mj-draw-tile.win::after {
+    opacity: 1;
+    animation: winRing 920ms ease-in-out infinite;
+  }
+
+  @keyframes winSpark {
+    0%, 100% { transform: rotate(0deg) scale(0.95); filter: blur(7px); }
+    50% { transform: rotate(32deg) scale(1.12); filter: blur(4px); }
+  }
+
+  @keyframes winRing {
+    0%, 100% { transform: scale(0.96); border-color: rgba(255, 230, 150, 0.0); }
+    50% { transform: scale(1.08); border-color: rgba(255, 230, 150, 0.75); }
+  }
+
   @keyframes drawToHand {
     0% { transform: translate3d(0, 0, 0) scale(0.92) rotate(-6deg); opacity: 0; }
     10% { opacity: 1; }
@@ -212,8 +281,18 @@
   }
 
   @keyframes winGlow {
-    0%, 100% { box-shadow: 0 18px 38px rgba(0, 0, 0, 0.3); filter: none; }
-    50% { box-shadow: 0 22px 60px rgba(255, 214, 90, 0.55); filter: saturate(1.2); }
+    0%, 100% {
+      box-shadow:
+        0 18px 38px rgba(0, 0, 0, 0.3),
+        0 0 0 rgba(255, 214, 90, 0);
+      filter: brightness(1.05) saturate(1.25) drop-shadow(0 0 14px rgba(255, 214, 90, 0.4));
+    }
+    50% {
+      box-shadow:
+        0 28px 92px rgba(255, 214, 90, 0.88),
+        0 0 120px rgba(255, 255, 255, 0.55);
+      filter: brightness(1.22) saturate(1.7) drop-shadow(0 0 34px rgba(255, 214, 90, 0.88));
+    }
   }
 
   .mj-hand {
@@ -428,8 +507,9 @@
     <div id="countdown">00:10</div>
 
     <div class="mj-scoreboard" id="scoreboard">
+      <h3 style="color: red;">碰碰胡牌桌</h3>
       <div class="row"><strong>阿白</strong><strong class="pos">+100</strong></div>
-      <div class="row"><span>玩家一</span><span class="neg">-35</span></div>
+      <div class="row"><span>Carpe diem</span><span class="neg">-35</span></div>
       <div class="row"><span>玩家二</span><span class="neg">-35</span></div>
       <div class="row"><span>玩家三</span><span class="neg">-30</span></div>
     </div>
@@ -448,21 +528,21 @@
       <div class="mj-wall">
         <div class="mj-tile back"></div><div class="mj-tile back"></div><div class="mj-tile back"></div><div class="mj-tile back"></div><div class="mj-tile back"></div><div class="mj-tile back"></div>
       </div>
-      <div class="mj-draw-tile" id="drawTile"><img src="../img/zhong.png" alt=""></div>
+      <a href="Memories.html" class="lk1 mj-draw-tile" id="drawTile" title="点击进入回忆"><img src="../img/zhong.png" alt=""></a>
       <div class="mj-self-tiles" id="selfTiles">
-        <div class="mj-tile front"><span class="mj-char">一万</span></div>
-        <div class="mj-tile front"><span class="mj-char">二万</span></div>
-        <div class="mj-tile front"><span class="mj-char">三万</span></div>
-        <div class="mj-tile front"><span class="mj-char">四万</span></div>
-        <div class="mj-tile front"><span class="mj-char">五万</span></div>
-        <div class="mj-tile front"><span class="mj-char">六万</span></div>
-        <div class="mj-tile front"><span class="mj-char">七万</span></div>
-        <div class="mj-tile front"><span class="mj-char">八万</span></div>
-        <div class="mj-tile front"><span class="mj-char">九万</span></div>
-        <div class="mj-tile front red"><img src="../img/fa.png" alt=""></div>
         <div class="mj-tile front"><img src="../img/bai.png" alt=""></div>
-        <div class="mj-tile front"><span class="mj-char">东</span></div>
-        <div class="mj-tile front"><span class="mj-char">東</span></div>
+        <div class="mj-tile front"><img src="../img/bai.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/bai.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/bai.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/fa.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/fa.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/fa.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/fa.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/ertong.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/ertong.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/zhong.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/zhong.png" alt=""></div>
+        <div class="mj-tile front"><img src="../img/zhong.png" alt=""></div>
       </div>
       <div class="mj-hand left" id="leftHand"></div>
       <div class="mj-hand right" id="rightHand"></div>
@@ -735,6 +815,13 @@
     var startedDraw = false;
     var won = false;
     countdownEl.textContent = formatTime(total);
+    if (drawTile) {
+      drawTile.addEventListener('click', function (e) {
+        if (!drawTile.classList.contains('win')) {
+          e.preventDefault();
+        }
+      });
+    }
 
     var timer = setInterval(function () {
       total -= 1;
