--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 		background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='480' height='280' viewBox='0 0 480 280'><defs><linearGradient id='u' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23ffffff'/><stop offset='1' stop-color='%23d7f5ff'/></linearGradient><linearGradient id='m' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23ff4d6d'/><stop offset='0.5' stop-color='%23ffd35c'/><stop offset='1' stop-color='%235ad2ff'/></linearGradient><linearGradient id='h' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23fff7cf'/><stop offset='1' stop-color='%23f4b400'/></linearGradient></defs><path d='M98 168c16-30 48-48 90-54 54-8 104 10 140 34 42 28 78 26 104 20-10 36-50 58-108 56-46-2-84-22-110-34-30-14-60-18-98-22-22-2-30 4-18 0z' fill='rgba(0,0,0,0.08)'/><path d='M132 90c-28 0-50 22-50 50 0 14 6 28 14 38 14 16 34 22 60 22h126c34 0 64-18 76-44 12-28 6-64-22-86-24-20-60-26-96-20-16-18-36-28-58-28-20 0-38 8-50 18z' fill='url(%23u)'/><path d='M156 122c18-16 40-22 66-18 18 2 36 10 54 24 12 10 26 18 42 22-10 10-26 18-46 18H158c-20 0-32-6-42-18 10-10 20-20 40-28z' fill='rgba(255,255,255,0.6)'/><path d='M300 70l18-46 20 10-22 44z' fill='url(%23h)'/><path d='M326 30c-6-6-10-10-14-16 12 0 22 4 32 14-6 2-12 2-18 2z' fill='%235ad2ff' opacity='0.85'/><path d='M156 56c24 10 46 22 70 38 16 10 34 16 54 18-10 10-26 18-46 18H156c-18 0-32-8-42-20 10-20 22-40 42-54z' fill='url(%23m)' opacity='0.7'/><circle cx='320' cy='112' r='10' fill='rgba(40,40,40,0.7)'/><circle cx='328' cy='118' r='4' fill='rgba(255,255,255,0.75)'/><path d='M340 132c10 6 20 6 30 0' stroke='rgba(40,40,40,0.55)' stroke-width='8' stroke-linecap='round'/><path d='M146 186l-16 58' stroke='rgba(190,220,235,0.9)' stroke-width='18' stroke-linecap='round'/><path d='M202 196l-16 56' stroke='rgba(190,220,235,0.9)' stroke-width='18' stroke-linecap='round'/><path d='M316 198l-18 54' stroke='rgba(190,220,235,0.9)' stroke-width='18' stroke-linecap='round'/><path d='M372 190l-18 56' stroke='rgba(190,220,235,0.9)' stroke-width='18' stroke-linecap='round'/><path d='M248 70c0-22 18-40 40-40 20 0 36 14 40 32 16 4 24 14 24 28 0 16-12 28-32 28h-88c-16 0-28-10-28-24 0-12 8-22 20-24 6-18 20-30 36-30z' fill='%23ffffff' opacity='0.0'/><path d='M224 92c18-18 40-28 60-28 18 0 32 10 40 26l14 8-10 20-14-8c-12-8-24-12-38-12-20 0-40 8-56 20l-20 14-12-18z' fill='%23d72638' opacity='0.96'/><circle cx='264' cy='74' r='16' fill='%23fff7cf' opacity='0.9'/><path d='M242 92c-8 0-14 6-14 14 0 6 4 12 10 14 12 4 26 6 44 6 26 0 48-8 66-18-14-12-32-18-54-18h-52z' fill='rgba(255,255,255,0.18)'/><path d='M230 104c-8-10-12-18-12-28 18-2 34 4 48 20-10 10-22 14-36 14z' fill='%23ffffff' opacity='0.8'/><path d='M250 66h62v18h-62z' fill='%23ffffff' opacity='0.72'/><circle cx='268' cy='60' r='10' fill='%23ffffff' opacity='0.9'/><circle cx='292' cy='60' r='10' fill='%23ffffff' opacity='0.9'/></svg>");
 		background-size: contain;
 		background-repeat: no-repeat;
-		/* background-image: url("img/dujiaoshou.png"); */
+		background-image: url("img/dujiaoshou.png");
 		background-position: center;
 		filter: drop-shadow(0 18px 36px rgba(0, 0, 0, 0.28));
 		z-index: 5;
@@ -289,14 +289,14 @@
 	}
 
 	@keyframes santaUnicornRide {
-		0% { transform: translate3d(-260px, 40px, 0) scale(0.35) scaleX(1); opacity: 0; }
+		0% { transform: translate3d(-260px, var(--santa-y0, 40px), 0) scale(0.35) scaleX(1); opacity: 0; }
 		6% { opacity: 0.95; }
-		45% { transform: translate3d(92vw, 10px, 0) scale(0.92) scaleX(1); opacity: 0.95; }
-		50% { transform: translate3d(110vw, 30px, 0) scale(0.55) scaleX(1); opacity: 0.0; }
-		50.01% { transform: translate3d(110vw, 30px, 0) scale(0.55) scaleX(-1); opacity: 0.0; }
+		45% { transform: translate3d(92vw, var(--santa-y1, 10px), 0) scale(0.92) scaleX(1); opacity: 0.95; }
+		50% { transform: translate3d(110vw, var(--santa-y2, 30px), 0) scale(0.55) scaleX(1); opacity: 0.0; }
+		50.01% { transform: translate3d(110vw, var(--santa-y2, 30px), 0) scale(0.55) scaleX(-1); opacity: 0.0; }
 		56% { opacity: 0.95; }
-		95% { transform: translate3d(-260px, 44px, 0) scale(0.35) scaleX(-1); opacity: 0.95; }
-		100% { transform: translate3d(-260px, 44px, 0) scale(0.35) scaleX(-1); opacity: 0; }
+		95% { transform: translate3d(-260px, var(--santa-y3, 44px), 0) scale(0.35) scaleX(-1); opacity: 0.95; }
+		100% { transform: translate3d(-260px, var(--santa-y3, 44px), 0) scale(0.35) scaleX(-1); opacity: 0; }
 	}
 
 	#snow-ground {
@@ -718,13 +718,13 @@
 				<li data-gift="2"></li>
 				<li data-gift="3"></li>
 				<li data-gift="4"></li>
-				<li data-gift="0"></li>
+				<li data-gift="5"></li>
 				<li data-gift="1"></li>
 				<li data-gift="2"></li>
 				<li data-gift="3"></li>
 				<li data-gift="4"></li>
 				<li data-gift="0"></li>
-				<li data-gift="1"></li>
+				<li data-gift="5"></li>
 			</ul>
 
 			<div id="gift-stage" aria-hidden="true"></div>
@@ -766,14 +766,39 @@
 			var giftStage = document.getElementById('gift-stage');
 			var snowGround = document.getElementById('snow-ground');
 			var snowman = document.getElementById('snowman');
+			var santaUnicorn = document.getElementById('santa-unicorn');
 
-			var giftTitles = ['小裙子', '毛衣', '金戒指', '手链', '睡衣'];
+			function randomBetween(min, max) {
+				return min + Math.random() * (max - min);
+			}
+
+			function randomizeSantaRide() {
+				if (!santaUnicorn) return;
+				var y0 = Math.round(randomBetween(18, 82));
+				var y1 = Math.round(randomBetween(0, 64));
+				var y2 = Math.round(randomBetween(12, 84));
+				var y3 = Math.round(randomBetween(20, 92));
+				var duration = randomBetween(18, 28).toFixed(2);
+				santaUnicorn.style.setProperty('--santa-y0', y0 + 'px');
+				santaUnicorn.style.setProperty('--santa-y1', y1 + 'px');
+				santaUnicorn.style.setProperty('--santa-y2', y2 + 'px');
+				santaUnicorn.style.setProperty('--santa-y3', y3 + 'px');
+				santaUnicorn.style.animationDuration = duration + 's';
+			}
+
+			if (santaUnicorn) {
+				randomizeSantaRide();
+				santaUnicorn.addEventListener('animationiteration', randomizeSantaRide);
+			}
+
+			var giftTitles = ['小裙子', '毛衣', '金戒指', '手链', '睡衣', '金苹果'];
 			var gifts = [
 				"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160' viewBox='0 0 160 160'><defs><linearGradient id='d' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23ff4d6d'/><stop offset='1' stop-color='%23ffd35c'/></linearGradient></defs><path d='M62 26c4 10 10 16 18 18 8-2 14-8 18-18 10 3 18 12 18 24v14H44V50c0-12 8-21 18-24z' fill='url(%23d)'/><path d='M58 64h44l16 70H42l16-70z' fill='url(%23d)' opacity='0.9'/><path d='M58 64c0 12 10 22 22 22s22-10 22-22' fill='none' stroke='rgba(255,255,255,0.7)' stroke-width='10' stroke-linecap='round'/><path d='M54 72h52' stroke='rgba(255,255,255,0.28)' stroke-width='10' stroke-linecap='round'/><circle cx='80' cy='56' r='6' fill='rgba(255,255,255,0.7)'/></svg>",
 				"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160' viewBox='0 0 160 160'><defs><linearGradient id='s' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%235ad2ff'/><stop offset='1' stop-color='%23ffb1c0'/></linearGradient></defs><path d='M54 40c8-10 16-14 26-14s18 4 26 14l26 18-14 22-18-12v56c0 10-8 18-18 18H72c-10 0-18-8-18-18V68L36 80 22 58l32-18z' fill='url(%23s)'/><path d='M64 72h32' stroke='rgba(255,255,255,0.65)' stroke-width='10' stroke-linecap='round'/><path d='M64 96h32' stroke='rgba(255,255,255,0.35)' stroke-width='10' stroke-linecap='round'/><path d='M80 66v74' stroke='rgba(255,255,255,0.22)' stroke-width='10' stroke-linecap='round'/></svg>",
 				"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160' viewBox='0 0 160 160'><defs><radialGradient id='g' cx='35%25' cy='30%25' r='70%25'><stop offset='0' stop-color='%23fff7cf'/><stop offset='0.45' stop-color='%23ffd35c'/><stop offset='1' stop-color='%23b46b00'/></radialGradient></defs><ellipse cx='80' cy='96' rx='44' ry='30' fill='none' stroke='url(%23g)' stroke-width='14'/><ellipse cx='80' cy='96' rx='30' ry='20' fill='none' stroke='rgba(255,255,255,0.55)' stroke-width='6'/><path d='M80 48l10 10-10 10-10-10z' fill='url(%23g)'/><path d='M80 42l14 14-14 14-14-14z' fill='none' stroke='rgba(255,255,255,0.7)' stroke-width='6' stroke-linejoin='round'/><circle cx='80' cy='56' r='4' fill='rgba(255,255,255,0.7)'/></svg>",
 				"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160' viewBox='0 0 160 160'><defs><linearGradient id='b' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23ffd35c'/><stop offset='1' stop-color='%23ff4d6d'/></linearGradient></defs><circle cx='80' cy='90' r='42' fill='none' stroke='url(%23b)' stroke-width='12'/><circle cx='80' cy='90' r='28' fill='none' stroke='rgba(255,255,255,0.55)' stroke-width='6'/><circle cx='80' cy='48' r='10' fill='url(%23b)'/><circle cx='110' cy='64' r='8' fill='rgba(255,255,255,0.6)'/><circle cx='50' cy='64' r='8' fill='rgba(255,255,255,0.6)'/><circle cx='120' cy='96' r='8' fill='rgba(255,255,255,0.6)'/><circle cx='40' cy='96' r='8' fill='rgba(255,255,255,0.6)'/></svg>",
-				"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160' viewBox='0 0 160 160'><defs><linearGradient id='p' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23b2f7ef'/><stop offset='1' stop-color='%23ffb1c0'/></linearGradient></defs><path d='M54 30h52c10 0 18 8 18 18v22c0 10-8 18-18 18h-8v44c0 10-8 18-18 18s-18-8-18-18V88h-8c-10 0-18-8-18-18V48c0-10 8-18 18-18z' fill='url(%23p)' opacity='0.92'/><path d='M58 48h44' stroke='rgba(255,255,255,0.6)' stroke-width='10' stroke-linecap='round'/><path d='M80 40v88' stroke='rgba(255,255,255,0.22)' stroke-width='10' stroke-linecap='round'/><circle cx='80' cy='68' r='6' fill='rgba(40,40,40,0.35)'/><circle cx='80' cy='84' r='6' fill='rgba(40,40,40,0.28)'/><path d='M64 112v28' stroke='rgba(255,255,255,0.55)' stroke-width='12' stroke-linecap='round'/><path d='M96 112v28' stroke='rgba(255,255,255,0.55)' stroke-width='12' stroke-linecap='round'/></svg>"
+				"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160' viewBox='0 0 160 160'><defs><linearGradient id='p' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%23b2f7ef'/><stop offset='1' stop-color='%23ffb1c0'/></linearGradient></defs><path d='M54 30h52c10 0 18 8 18 18v22c0 10-8 18-18 18h-8v44c0 10-8 18-18 18s-18-8-18-18V88h-8c-10 0-18-8-18-18V48c0-10 8-18 18-18z' fill='url(%23p)' opacity='0.92'/><path d='M58 48h44' stroke='rgba(255,255,255,0.6)' stroke-width='10' stroke-linecap='round'/><path d='M80 40v88' stroke='rgba(255,255,255,0.22)' stroke-width='10' stroke-linecap='round'/><circle cx='80' cy='68' r='6' fill='rgba(40,40,40,0.35)'/><circle cx='80' cy='84' r='6' fill='rgba(40,40,40,0.28)'/><path d='M64 112v28' stroke='rgba(255,255,255,0.55)' stroke-width='12' stroke-linecap='round'/><path d='M96 112v28' stroke='rgba(255,255,255,0.55)' stroke-width='12' stroke-linecap='round'/></svg>",
+				"data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160' viewBox='0 0 160 160'><defs><radialGradient id='ga' cx='35%25' cy='30%25' r='70%25'><stop offset='0' stop-color='%23fff7cf'/><stop offset='0.45' stop-color='%23ffd35c'/><stop offset='1' stop-color='%23b46b00'/></radialGradient><linearGradient id='gl' x1='0' y1='0' x2='1' y2='1'><stop offset='0' stop-color='%238be37a'/><stop offset='1' stop-color='%2338b24a'/></linearGradient></defs><path d='M80 52c-22-16-50 2-48 30 2 38 18 64 48 64s46-26 48-64c2-28-26-46-48-30z' fill='url(%23ga)'/><path d='M80 44c0-12 6-22 16-28' fill='none' stroke='rgba(110,60,20,0.9)' stroke-width='10' stroke-linecap='round'/><path d='M96 28c-6 2-12 6-16 12 10 0 18-2 26-8-2-2-6-4-10-4z' fill='url(%23gl)' opacity='0.95'/><path d='M58 74c10-10 22-14 38-12' fill='none' stroke='rgba(255,255,255,0.55)' stroke-width='10' stroke-linecap='round'/><circle cx='62' cy='88' r='6' fill='rgba(255,255,255,0.55)'/></svg>"
 			];
 
 			function setSnowLevel(px) {
