--- a/html/EasterEgg.html
+++ b/html/EasterEgg.html
@@ -119,7 +119,7 @@
 
     // 修改音乐自动播放
     const audio = document.createElement("audio");
-        audio.src = "../music/qingge.mp3";
+        audio.src = "../music/Snow Memory.mp3";
         audio.autoplay = true;
         audio.loop = true; // 添加循环播放
         document.body.appendChild(audio);
